--- a/novoTeste2/plugins/phonegap-facebook-plugin/platforms/android/res/values/facebookconnect.xml
+++ b/novoTeste2/plugins/phonegap-facebook-plugin/platforms/android/res/values/facebookconnect.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="fb_app_id">123456789</string>
-    <string name="fb_app_name">TEST</string>
+    <string name="fb_app_id">152479708206968</string>
+    <string name="fb_app_name">appTeste</string>
 </resources>
