--- a/novoTeste2/plugins/phonegap-facebook-plugin/platforms/android/res/xml/config.xml
+++ b/novoTeste2/plugins/phonegap-facebook-plugin/platforms/android/res/xml/config.xml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="io.cordova.hellocordova" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
+    <gap:plugin name="com.phonegap.plugins.facebookconnect" version="0.9.0"><param name="APP_ID" value="152479708206968" /><param name="APP_NAME" value="appTeste" /></gap:plugin>
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
     </feature>
